# edgetransformers

./: Cargo.toml
src/: activations.rs  attention.rs  config.rs  embeddings.rs  feedforward.rs  layer_norm.rs  lib.rs  pooling.rs  quantizable.rs
src/utils/: linear_algebra.rs  mod.rs
