[package]
name = "edgetransformers"
version = "0.1.0"
edition = "2024"
authors = ["Ólafur Aron Jóhannsson <olafurjohannss@gmail.com>"]
description = ""
repository = "https://github.com/olafurjohannssson/edgetransformers"
license = "MIT"
keywords = ["bert", "nlp", "wasm", "transformers", "embeddings"]
categories = ["wasm", "text-processing", "encoding"]

[features]
default = []  # No OpenBLAS by default
openblas = ["dep:blas-src", "dep:openblas-src", "ndarray/blas"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Optional BLAS dependencies
blas-src = { version = "0.10", features = ["openblas"], optional = true }
openblas-src = { version = "0.10", features = ["cblas", "system"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
rayon = "1.11.0"
dirs = "6.0.0"
ndarray-stats = "0.6.0"
matrixmultiply = { version = "0.3", features = ["threading", "num_cpus", "cgemm"] }
ndarray = { version = "0.16", features = ["rayon", "matrixmultiply-threading"] }
